# fogros-realtime-examples

./: .gitignore  Dockerfile  README.md
add_three_ints/: README.md
ex1-add_three_ints/: package.xml  setup.cfg
ex1-cpp_add_three_ints/: CMakeLists.txt  README.md  package.xml
ex1-cpp_add_three_ints/include/: client.hpp  service.hpp
ex1-cpp_add_three_ints/src/: client.cpp  service.cpp
ex1-py-add_three_ints/: README.md  package.xml  setup.py
ex1-py-add_three_ints/add_three_ints/: add_three_ints_client.py  add_three_ints_service.py
ex2-sam/: CMakeLists.txt  README.md  package.xml  setup.py
ex2-sam/sam/: sam_client.py  sam_period.py  sam_service.py
ex3-yolov8/: README.md  package.xml  setup.py
ex3-yolov8/yolo/: yolo_client.py  yolo_service.py
ex4-mpt-ros/: Dockerfile  TUTORIAL.md
ex4-mpt-ros/cpp_srvcli/: CMakeLists.txt  package.xml
ex4-mpt-ros/cpp_srvcli/src/: add_three_ints_client.cpp  add_three_ints_server.cpp  motion_plan_client.cpp  motion_plan_server.cpp
ex4-mpt-ros/mpt_interfaces/: CMakeLists.txt  package.xml
ex4-mpt-ros/mpt_interfaces/msg/: MotionPlanRequest.msg
ex4-mpt-ros/mpt_interfaces/srv/: MPT.srv
ex5-gqcnn/gqcnn_interfaces/: CMakeLists.txt  package.xml
ex5-gqcnn/gqcnn_interfaces/msg/: GQCNNGrasp.msg
ex5-gqcnn/gqcnn_interfaces/srv/: GqCnnGrasp.srv
ex5-gqcnn/py_srvcli/: package.xml  setup.py
ex5-gqcnn/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
ex6-apriltag/apriltag_msgs_fork/: CMakeLists.txt  package.xml
ex6-apriltag/apriltag_msgs_fork/srv/: ImageProcess.srv
shared_srvs/: CMakeLists.txt
(+2 files in other folders)
