<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sam</name>
  <version>0.1.0</version>
  <description>FogROS RealTime: Example 2</description>
  <maintainer email="trinityc@berkeley.edu">Trinity Chung</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>shared_srvs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-torch</depend>
  <depend>python3-torchvision</depend>
  <depend>python3-matplotlib</depend>
  <depend>python3-pil</depend>
  <depend>python3-opencv</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
    <rosindex>
      <readme>./README.md</readme>
    </rosindex>
  </export>
</package>
